fixed details alignment, input and form styles

--- a/public/styles.css
+++ b/public/styles.css
@@ -13,7 +13,7 @@
       color: #222;
     }
 
-    form {
+    form #albumSearch{
       background-color: #ffffff;
       width: 300px;
       height: 44px;
@@ -23,7 +23,7 @@
       align-items: center;
     }
 
-    input {
+    #albumSearch {
       all: unset;
       font: 16px system-ui;
       color: #6c757d;
